# kr_rviz_demo

./: CMakeLists.txt  README.md  package.xml
include/: nodeCollection.hpp  publishTransform.h  tf_publisher_demo_cartesian.h
launch/: kr_rviz_demo.launch.py
meshes/: frame.stl
meshes/a810/: a810_Base.stl  a810_Flange.stl  a810_Link2.stl  a810_Link3.stl  a810_Link4.stl  a810_Link5.stl  a810_Link6.stl  a810_Link7.stl  a810_ToolIO.stl
rviz/: kr_rviz_demo.rviz
src/: kr_state_manager.cpp  kr_state_publisher.cpp  nodeCollection.cpp  state_publisher.cpp
urdf/: demo_cartesian.urdf  demo_cartesian.urdf.xacro  kr2_robot_a810_tio.urdf  kr2_robot_a810_tio.xacro  kr2_robot_a810_tio_fixed.urdf
